fix dropbar menu no gap issue.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -111,11 +111,12 @@
   position: absolute;
   min-width: 160px;
   background-color: #fff;
-  border: 1px solid $grey-color-light;
+  //border: 1px solid $grey-color-light;
   
   ul{
     list-style-type: none;
-    margin: 0;
+    border: 1px solid $grey-color-light;
+    margin: 18px 0 0 0;
     padding: 0;
     li {
       //border: 1px solid $grey-color-light;
